Add experimental setting for maximum performance mode

--- a/views/settings.html
+++ b/views/settings.html
@@ -93,6 +93,14 @@
             </div>
         </div>
         <div class="section">
+            <h4>Configurações Experimentais</h4>
+            <span id="wip">⚠️Configurações críticas, proceda com cuidado!</span>
+            <div class="setting">
+                <label for="maxperformance">Habilitar modo de máxima performance:</label>
+                <input type="checkbox" id="FORCE_MAXPERFORMANCE" name="ENABLE_MAXPERFORMANCE">
+            </div>
+        </div>
+        <div class="section">
             <h4>Configurações de Banco de dados</h4>
             <span id="wip">⚠️Em desenvolvimento...</span>
         </div>
