--- a/views/roots.html
+++ b/views/roots.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../static/css/roots-styles.css">
     <link rel="stylesheet" type="text/css" href="../static/css/animations.css">
     <link rel="stylesheet" type="text/css" href="../static/css/popup.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/spinner.css">
 </head>
 <body>
     <header>
