--- a/views/roots.html
+++ b/views/roots.html
@@ -69,6 +69,10 @@
                     <input type="checkbox" id="export-separation">
                     <label for="export-separation">Separar resultados por fator.</label>
                 </div>
+                <div class="preloading-commands-specs">
+                    <input type="checkbox" id="white-background">
+                    <label for="white-background">Imagem possui fundo muito claro.</label>
+                </div>
             </section>
             <section class="operations">
                 <h3 style="margin-right: 1200px;">Operações</h3>
