Refatorar: Atualizar classes de pré-carregamento para usar nomenclatura consistente

--- a/views/roots.html
+++ b/views/roots.html
@@ -56,7 +56,7 @@
             <section class="preloading"></section>
                 <h2 style="margin-right: 1200px; margin-bottom: 0;">Configurações:</h3>
                 <h3 style="margin-right: 50px; display: none;">Pré-carregamento</h3>
-                <div class="preloading-genotype" style="display: none;">
+                <div class="preloading-naming" style="display: none;">
                     <div class="text-options">
                         <select id="textOption">
                             <option value="selectOnly">Incluir</option>
@@ -65,7 +65,7 @@
                         <input type="text" id="textInput" placeholder="Insira a configuração.">
                     </div>
                 </div>
-                <div class="preloading-genotype" style="display: none;">
+                <div class="preloading-naming" style="display: none;">
                     <input type="checkbox" id="export-separation">
                     <label for="export-separation">Separar resultados por fator.</label>
                 </div>
