--- a/static/css/roots-styles.css
+++ b/static/css/roots-styles.css
@@ -65,17 +65,17 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
-.preloading, .preloading-genotype, .preloading-commands-specs {
+.preloading, .preloading-naming, .preloading-commands-specs {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
 }
 
-.preloading-genotype, .preloading-commands-specs {
+.preloading-naming, .preloading-commands-specs {
     margin-bottom: 10px;
 }
 
-.preloading-genotype label, .preloading-commands-specs label {
+.preloading-naming label, .preloading-commands-specs label {
     display: inline-block;
     background-color: #e0e0e0;
     color: #333;
@@ -84,16 +84,16 @@ body {
     cursor: pointer;
 }
 
-.preloading-genotype input[type="checkbox"], .preloading-commands-specs input[type="checkbox"] {
+.preloading-naming input[type="checkbox"], .preloading-commands-specs input[type="checkbox"] {
     display: none;
 }
 
-.preloading-genotype input[type="checkbox"]:checked + label, .preloading-commands-specs input[type="checkbox"]:checked + label {
+.preloading-naming input[type="checkbox"]:checked + label, .preloading-commands-specs input[type="checkbox"]:checked + label {
     background-color: var(--primary--purple-color);
     color: white;
 }
 
-.preloading-genotype input[type="text"], .preloading-commands-specs input[type="text"] {
+.preloading-naming input[type="text"], .preloading-commands-specs input[type="text"] {
     padding: 10px 16px;
     font-size: 12px;
     width: auto;
