--- a/static/css/roots-styles.css
+++ b/static/css/roots-styles.css
@@ -101,6 +101,16 @@ body {
     border-radius: 4px;
 }
 
+#exportSeparationDropdown {
+    padding: 10px 16px;
+    font-size: 12px;
+    font-weight: lighter;
+    width: auto;
+    border: #e0e0e0 1px solid;
+    border-radius: 4px;
+    background-color: #fff;
+}
+
 .text-options select {
     padding: 8px;
     font-size: 14px;
