--- a/views/leaves.html
+++ b/views/leaves.html
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <div class="preloading-naming" style="display: none;">
-                    <input type="checkbox" id="export-separation">
-                    <label for="export-separation">Separar resultados por fator.</label>
+                    <label for="exportSeparationDropdown">Separar resultados por: </label>
+                    <select id="exportSeparationDropdown"></select>
                 </div>
                 <div class="preloading-commands-specs">
                     <input type="checkbox" id="white-background">
