--- a/views/leaves.html
+++ b/views/leaves.html
@@ -158,8 +158,10 @@
 <script src="../static/js/send-commands.js"></script>
 <script src="../static/js/receive-response.js"></script> 
 <script src="../static/js/custom-loading.js"></script>
-</body>
+<script src="../static/js/commands-check.js"></script>
 <script>
+    document.addEventListener('DOMContentLoaded', checkAndBlockOperations);
+
     var prevButton = document.getElementById('prevImageButton');
     var nextButton = document.getElementById('nextImageButton');
     var fileInput = document.getElementById('fileInput');
@@ -191,7 +193,6 @@
         }
 
         return false;
-        }
-
+    }
 </script>
 </html>
