--- a/static/css/leaves-styles.css
+++ b/static/css/leaves-styles.css
@@ -172,6 +172,11 @@ body {
     color: white;
 }
 
+.operation-item input[type="checkbox"]:disabled + label {
+    background-color: #f0f0f0;
+    color: #ccc;
+    cursor: not-allowed;
+}
 
 .mode-dropdown {
     position: relative;
