Refatorar: Adicionar novos checkboxes para pigmentação, complexidade do perímetro e área da folha em leaves.html; incluir opções de tamanho, danos e textura em roots.html

--- a/views/roots.html
+++ b/views/roots.html
@@ -92,6 +92,18 @@
                     <input type="checkbox" id="root-format">
                     <label for="root-format">Formato</label>
                 </div>
+                <div class="operation-item">
+                    <input type="checkbox" id="root-size">
+                    <label for="root-size">Tamanho</label>
+                </div>
+                <div class="operation-item">
+                    <input type="checkbox" id="root-damage">
+                    <label for="root-damage">Danos</label>
+                </div>
+                <div class="operation-item">
+                    <input type="checkbox" id="root-texture">
+                    <label for="root-texture">Textura</label>
+                </div>
             </section>
             <section class="export-type">
                 <h3 style="margin-right: 2700px;">Exportação</h3>
