Refatorar: Atualizar mensagem de sucesso em settings.html para maior clareza

--- a/views/settings.html
+++ b/views/settings.html
@@ -180,7 +180,7 @@
                     <img src="../static/images/sucess.svg" alt="Sucesso">
                 </div>
                 <h3>Sucesso</h3>
-                <p>Os modelos foram verificados e nenhum erro encontrado.</p>
+                <p>Todos os modelos encontrados foram verificados e nenhum erro foi encontrado.</p>
                 <button class="close-button" onclick="closePopup('sucess-model-popup')">Fechar</button>
             </div>
         </div>
